# pmu-events

./: .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README  README.md  jevents.py
.github/workflows/: cmake.yml
examples/: main.c
include/pmu-events/: pmu-events.h  types.h
include/pmu-events/_impl/: pmu-events.h
include/pmu-events/aarch64/: util.h
include/pmu-events/x86/: util.h
src/: pmu-events.c
tests/: test.c
